name:                ghcjs-vdom
version:             0.2.0.0
synopsis:            Virtual-dom bindings for GHCJS
description:         Virtual-dom is a library for fast incremental DOM
                     updates by comparing virtual immutable DOM trees to
                     find a minimal number of changes to update the actual DOM.

                     The bindings support memoized nodes which are only
                     recomputed when the underlying data changes, using
                     referential equality for the function and arguments.

                     The diff procedure in the virtual-dom library has been
                     modified slightly to support computing a diff in an
                     asynchronous thread. Since computing a diff forces all data
                     around the virtual-dom tree, the computation, the computation
                     can be expensive.

                     An asynchronous diff computation can be safely aborted
                     with an async exception.

license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  virtual-dom/lib.require.js
                     virtual-dom/diff.js
                     virtual-dom/LICENSE
                     virtual-dom/handle-thunk.js
                     virtual-dom/README.md
                     virtual-dom/package.json
                     data/example.css
                     README.markdown

flag build-examples
  description: build the example programs
  default: False
  manual: True

library
  js-sources: jsbits/vdom.js
              virtual-dom/lib.js
  ghcjs-options: -Wall
  exposed-modules:     GHCJS.VDOM
                       GHCJS.VDOM.Attribute
                       GHCJS.VDOM.Component
                       GHCJS.VDOM.DOMComponent
                       GHCJS.VDOM.Element
                       GHCJS.VDOM.Event
                       GHCJS.VDOM.QQ
                       GHCJS.VDOM.Render
                       GHCJS.VDOM.Unsafe
  other-modules:       GHCJS.VDOM.Internal
                       GHCJS.VDOM.Internal.TH
                       GHCJS.VDOM.Internal.Thunk
                       GHCJS.VDOM.Internal.Types
                       GHCJS.VDOM.Element.Builtin
  build-depends:       base >=4.7 && < 5,
                       ghc-prim,
                       ghcjs-ffiqq,
                       ghcjs-base >= 0.2.0.0,
                       ghcjs-prim,
                       containers,
                       split,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ghcjs-vdom-example-table
  if !flag(build-examples)
      buildable: False
  Main-Is:        Table.hs
  Default-Language: Haskell2010
  hs-source-dirs: examples
  Build-Depends:  base                >= 4    &&  < 5,
                  ghcjs-ffiqq,
                  ghcjs-vdom,
                  containers,
                  ghcjs-base
  ghcjs-Options: -Wall

executable ghcjs-vdom-example-components
  if !flag(build-examples)
      buildable: False
  Main-Is:        Components.hs
  Default-Language: Haskell2010
  hs-source-dirs: examples
  Build-Depends:  base                >= 4    &&  < 5,
                  ghcjs-ffiqq,
                  ghcjs-vdom,
                  containers,
                  ghcjs-base
  ghcjs-Options: -Wall

executable ghcjs-vdom-example-render
  if !flag(build-examples)
      buildable: False
  Main-Is:        Render.hs
  Default-Language: Haskell2010
  hs-source-dirs: examples
  Build-Depends:  base                >= 4    &&  < 5,
                  ghcjs-ffiqq,
                  ghcjs-vdom,
                  containers,
                  ghcjs-base
  ghcjs-Options: -Wall